RESOLVED FIXED75912
[chromium] Correctly recreate DrawingBuffer on lost device
https://bugs.webkit.org/show_bug.cgi?id=75912
Summary [chromium] Correctly recreate DrawingBuffer on lost device
John Bauman
Reported 2012-01-09 16:45:06 PST
[chromium] Correctly recreate DrawingBuffer on lost device
Attachments
Patch (1.74 KB, patch)
2012-01-09 16:50 PST, John Bauman
no flags
Patch (1.75 KB, patch)
2012-01-09 16:56 PST, John Bauman
no flags
John Bauman
Comment 1 2012-01-09 16:50:10 PST
WebKit Review Bot
Comment 2 2012-01-09 16:52:44 PST
Attachment 121760 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Bauman
Comment 3 2012-01-09 16:56:31 PST
Jeff Timanus
Comment 4 2012-01-10 08:33:52 PST
Comment on attachment 121761 [details] Patch Thanks for catching this, John. LGTM.
Kenneth Russell
Comment 5 2012-01-10 10:21:47 PST
Comment on attachment 121761 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121761&action=review > Source/WebCore/ChangeLog:11 > + No new tests. Have you tried to use LayoutTestController.loseCompositorContext() (see LayoutTests/platform/chromium/compositing/) or the WEBGL_lose_context extension (see LayoutTests/fast/canvas/webgl/) to force execution of this code path? In general we should add a test each time an issue like this is discovered to prevent future regressions. However, if the above primitives don't allow testing of this code path then I won't hold it up.
Kenneth Russell
Comment 6 2012-01-10 14:13:13 PST
Comment on attachment 121761 [details] Patch After offline discussion it seems like the WEBGL_lose_context extension would need to lose the context at a deeper level in order to test this code path. Given that, r+'ing as is to get this fix in now.
WebKit Review Bot
Comment 7 2012-01-10 15:19:16 PST
Comment on attachment 121761 [details] Patch Clearing flags on attachment: 121761 Committed r104636: <http://trac.webkit.org/changeset/104636>
WebKit Review Bot
Comment 8 2012-01-10 15:19:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.