[chromium] Correctly recreate DrawingBuffer on lost device https://bugs.webkit.org/show_bug.cgi?id=75912

Patch by John Bauman <jbauman@chromium.org> on 2012-01-10
Reviewed by Kenneth Russell.

Create new drawing buffer on new context, not old lost context. Also,
make sure to bind new drawing buffer.

No new tests.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::maybeRestoreContext):

Canonical link: https://commits.webkit.org/92813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104636 268f45cc-cd09-0410-ab3c-d52691b4dbfc